# SelfDrivingCar_Udacity

./: README.md
Behavioral_Cloning/: model.py  train_nvidia_network.py
Behavioral_Cloning/try/: train_lenet.py  train_lenet_data_augmentation.py  train_mutli_camra.py
Convolutional_Neural_Networks/: lenet.data-00000-of-00001  lenet.index  max_pooling.ipynb  visualize_dataset.py
Convolutional_Neural_Networks/CarND-Traffic-Sign-Classifier-Project-master/: lenet.data-00000-of-00001  my_train.py  others.py
FindLaneLine/CarND-LaneLines-P1/: test.py  video_solution.ipynb
Introduct_to_tf/: mini_batch.ipynb  mnist_classify.ipynb
Introduct_to_tf/CarND-LeNet-Lab-master/: lenet.index
Introduct_to_tf/CarND-TensorFlow-Lab-master/: download_uncompress.ipynb  normalize_features.ipynb  variable_initialization.ipynb
Keras/: traffic-sign-classification-with-keras-v1.ipynb
MiniFlow/: gradientdescent.ipynb  miniflow.ipynb
advanced_lane_finding/ALL_IN_ON_demo/.ipynb_checkpoints/: all_in_one-checkpoint.ipynb
advanced_lane_finding/CarND-Advanced-Lane-Lines-master/: process_video.bak  process_video.py  wide_dist_pickle.p
advanced_lane_finding/CarND-Camera-Calibration-master/: color_space_selection.ipynb
advanced_lane_finding/CarND-Camera-Calibration-master/.ipynb_checkpoints/: camera_calibration-checkpoint.ipynb  selfdefined_canny-checkpoint.ipynb
deep_neuron_network/: dropout.ipynb
introduce_to_nerual_network/: and_or_xor_not_perceptron.ipynb  other.ipynb
machine_learning_basic/: demo.ipynb
machine_learning_basic/.ipynb_checkpoints/: demo-checkpoint.ipynb
term1/Behavioral_Cloning/: README.md  writeup_template.md
term1/Behavioral_Cloning/try/: train_nothing.py  train_nvidia_network_more_data.py  train_preprocess_data.py
term1/Convolutional_Neural_Networks/: data_augment.py  lenet.ipynb
term1/Convolutional_Neural_Networks/CarND-Traffic-Sign-Classifier-Project-master/: Traffic_Sign_Classifier.ipynb  lenet.index
term1/FindLaneLine/CarND-LaneLines-P1/: my_video.py  pic_solution.ipynb
term1/FindLaneLine/Tutorial/: canny detect lines.ipynb  color_selection.ipynb  hough_transform.ipynb
term1/Introduct_to_tf/: easy_tf.ipynb  softmax.ipynb
term1/Introduct_to_tf/CarND-LeNet-Lab-master/: LeNet-Lab.ipynb  lenet.data-00000-of-00001
term1/Introduct_to_tf/CarND-TensorFlow-Lab-master/: hyper_parameters_selection.ipynb
term1/Keras/: traffic_cnn.py  traffic_mlp.py
term1/MiniFlow/: BP.ipynb  BP_SGD.ipynb
term1/advanced_lane_finding/ALL_IN_ON_demo/: Measuring Curvature.ipynb
term1/deep_neuron_network/: model.ckpt.data-00000-of-00001  model.ckpt.index  multi-layer.ipynb  relu.ipynb  tf_variable_name.ipynb
term1/vehicle_tracking/: simple_classifier.ipynb
term2/PID_CONTROL/: PID.ipynb
term2/SensorFusion_ExtendKalmanFilter/eigen_test/: CMakeLists.txt  test.cpp
term2/Unscented-Kalman-Filter/predict_radar_measurement/: CMakeLists.txt
term2/markov_assumpiton_localizer/motion_model_only/: CMakeLists.txt  bayesianFilter.cpp  bayesianFilter.h  help_functions.h  main.cpp
term2/markov_assumpiton_localizer/motion_observation/: CMakeLists.txt  bayesianFilter.cpp  bayesianFilter.h  help_functions.h  main.cpp
term2/markov_assumpiton_localizer/print_all/: CMakeLists.txt  help_functions.h  main.cpp
term2/particle_filters_python/: 1_moving_robots.py  2_moving_robots_noise.py  3_create_particle.py  4_moving_each_particle.py  5_important_weight.py  6_resampling.py  7_particle_orientation.py  8_calcuate_residual_error.py
term3/Behavior_planning_python/: cost_functions.py  simulate_behavior.py  vehicle.py
term3/search/: 1_first_search.py  2_expand.py  3_print_path.py  4_A_star.py  5_value.py  6_optimal_policy.py  7_left_turn.py
term3/trajectory_generation/JMT_polynomial/: CMakeLists.txt  JMT_polynomial.cpp
term3/trajectory_generation/hybrid-astar/: CMakeLists.txt
term3/trajectory_generation/hybrid-astar/src/: hybrid_breadth_first.cpp  hybrid_breadth_first.h
transfer_learning/CarND-Transfer-Learning-Lab-master/: feature_extraction_solution.py
vehicle_tracking/: simple_demo.ipynb  sliding_window.ipynb  svc_pickle.p
vehicle_tracking/CarND-Vehicle-Detection-master/: process_video_slow.py  svc_pickle.p
(+63 files in other folders)
